# mjpg-streamer

mjpg-streamer-experimental/: CMakeLists.txt
mjpg-streamer-experimental/plugins/input_gstreamer/: CMakeLists.txt  input_gstreamer.c  input_gstreamer.h
